Fixing testimonials on mobile

--- a/assets/styles/base.css
+++ b/assets/styles/base.css
@@ -94,7 +94,7 @@ h2.large {
     line-height: 1.8rem;
   }
   p {
-    font-size: 0.85rem !important;
+    font-size: 0.85rem;
   }
 }
 p {
